# kape

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  go.work  go.work.sum  package.json
.changeset/: config.json
.claude/: settings.json
.claude/agents/: release-version-manager.md  requirement-reviewer.md  senior-dev-implementer.md  solution-architect.md  tech-stack-auditor.md  tech-stack-maintainer.md  test-quality-engineer.md
.claude/commands/: colab.md  planwork.md
adapters/: Dockerfile.alertmanager  Dockerfile.audit  Dockerfile.falco  go.mod  go.sum  package.json
config/rbac/: operator-clusterrole.yaml
config/samples/: kapehandler-test.yaml  kapeschema-test.yaml
crds/: kape-handler-webhook.yaml  kape.io_kapehandlers.yaml  kape.io_kapeschemas.yaml  kape.io_kapetools.yaml  kustomization.yaml
dashboard/: Dockerfile  package.json
dashboard/design/: KAPE-Dashboard.html
docs/roadmap/: phases.md
helm/: Chart.yaml  package.json  values.yaml
operator/: Dockerfile  README.md  go.mod  go.sum  package.json
runtime/: Dockerfile  docker-compose.dev.yml  package.json  pyproject.toml  settings.toml
runtime/src/kape_runtime/: config.py  consumer.py  main.py  models.py  probe.py  schema_loader.py  task_service.py  tracing.py
runtime/src/kape_runtime/graph/: graph.py  nodes.py  state.py
runtime/tests/: test_config.py  test_consumer.py  test_graph.py  test_models.py  test_probe.py  test_schema_loader.py  test_task_service.py
specs/: plan.md
task-service/: .openapi-generator-ignore  Dockerfile  Makefile  go.mod  go.sum  package.json
(+191 files in other folders)
