[project]
name = "kape-runtime"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain>=0.3.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "nats-py[nkeys]>=2.9.0",
    "pydantic>=2.9.0",
    "dynaconf>=3.2.0",
    "jinja2>=3.1.0",
    "simpleeval>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "python-ulid>=3.0.0",
    "mcp>=1.3.0",
]

[project.scripts]
kape-runtime = "kape_runtime.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kape_runtime"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
